Fixed css scrollbar bug when no bookmarks in Firefox.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -975,7 +975,6 @@ body {
         font-size: 1.4em;
         font-weight: normal;
         text-align: center;
-        margin: 2px 10px 10px;
         position: relative;
         z-index: 10;
       }
